src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary +</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Products_For_Customer_Services__c</fullName>
        <inlineHelpText>Select the product(s) that the case relates to</inlineHelpText>
        <label>Products (For Customer Services)</label>
        <picklist>
            <picklistValues>
                <fullName>iBoard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iBoard whole school</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketplace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New teachers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phonics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sharemylesson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPaG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TES Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TES Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TES Courses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TES - digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TES India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TES Labs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TES - print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TES Pro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TES Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TES Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THE Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THE Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TESS Print</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Publication_Date__c</fullName>
        <label>Publication Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <label>Publication</label>
        <picklist>
            <picklistValues>
                <fullName>TES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TES Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TES Further Jobs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TES Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TES Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TES Scotland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TES Special Supplements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THE Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THE Special Supplements</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Created a new pick list for Reason as dependent pick lists can only have 40 values and cannot be on the dependent side of the relationship</description>
        <label>Reason</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Account Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGT/3RD PARTY QUERIES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B2B enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Issue Query</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing - Invoice Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bounced Mail in email log</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel and Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation before renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation within free trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change email address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Address Query</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change postal address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change user name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint - Unable to Cancel in Writing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirm Expiry Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirm Renewal received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirm Start Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Copy of supplement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damaged - Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damaged - Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default Royal Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery Problem (Damaged, Late, Missing)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Different Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Accessing problems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Debit Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate e-receipts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Sub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email not received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Complaint__c</fullName>
        <label>Reason for Complaint</label>
        <picklist>
            <controllingField>Main_Reason_for_Complaint__c</controllingField>
            <picklistValues>
                <fullName>100% Run to Fill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15% Repeat Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15% Repeat Discount (Print)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15% Repeat Discount (Web)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advert Appeared Early</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advert Appeared Late</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advert Cancelled (Additional Module)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advert Cancelled (Print)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advert Cancelled (Web)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advert Did Not Appear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advert Not Ordered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency Discount 10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency Discount 12.5%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency Discount 15%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency Discount 17.5%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency Incentive Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Discount 10% Omitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Discount 12.5% Omitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount Omitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Double Agency Commission Omitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Advert (Additional Module)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Advert (Print)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Advert (Web)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Invoice (System Error)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Primary+ Subscription</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Web Gold Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error (Print &amp; Web)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error on Print Advert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error on Web Advert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardsell Tactics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Disengagement__c</fullName>
        <label>Reason for Disengagement</label>
        <picklist>
            <picklistValues>
                <fullName>TES is too expensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use TES as last resort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TES is difficult to deal with</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not aware of competitive media usage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Escalation__c</fullName>
        <label>Reason for Escalation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reported_By_Team__c</fullName>
        <label>Reported By (Team)</label>
        <picklist>
            <picklistValues>
                <fullName>Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Success Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upsell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upsell Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upsell Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upsell P&amp;O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reported_By__c</fullName>
        <label>Reported By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_Time__c</fullName>
        <formula>-(ROUND((ROUND (8 * ( 
( 5 * FLOOR( ( Customer_Care_Call_Date__c - DATE( 1900, 1, 8) ) / 7) + 
MIN(5, MOD( Customer_Care_Call_Date__c - DATE( 1900, 1, 8), 7) + 
MIN( 1, 24 / 8 * ( MOD( (DATETIMEVALUE(TEXT( Customer_Care_Call_Date__c) + &apos; 09:00:00&apos;)) - DATETIMEVALUE( &apos;1900-01-08 09:00:00&apos; ), 1 ) ) ) 
) 
) 
- 
( 5 * FLOOR( ( DATEVALUE( Date_Time_Closed__c ) - DATE( 1900, 1, 8) ) / 7) + 
MIN( 5, MOD( DATEVALUE( Date_Time_Closed__c ) - DATE( 1900, 1, 8), 7 ) + 
MIN( 1, 24 / 8 * ( MOD( Date_Time_Closed__c - DATETIMEVALUE( &apos;1900-01-08 09:00:00&apos; ), 1) ) ) 
) 
) 
), 
2)), 0))</formula>
        <label>Customer Care Call Resolution Time (Hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_time__c</fullName>
        <formula>IF( RecordType.Name == &apos;Customer Success Case - Surveys&apos; ,DATEVALUE(Date_Time_Closed__c)  - Check_In_Call_Date__c,  DateTime_Closed__c -  CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SD_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SD Name</label>
        <referenceTo>Organisation__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SD_Phone_Number__c</fullName>
        <formula>SD_Name__r.Phone_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SD Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD_Post_Code__c</fullName>
        <formula>SD_Name__r.Postcode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SD Post Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Person_Txt__c</fullName>
        <formula>Vacancy__r.Booking__r.Salesperson__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Person (Txt)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Person__c</fullName>
        <label>Sales Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <picklist>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miss.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>School_Institution__c</fullName>
        <label>School/Institution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SocialMedia_Additional_Info__c</fullName>
        <label>SocialMedia Additional Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SocialMedia_subscription_End_Date__c</fullName>
        <label>SocialMedia subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Custom__c</fullName>
        <label>Status</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unresponsive to Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Attempt 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Attempt 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Attempt 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Attempt 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Attempt 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remedial Action Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remedial Action Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable To Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined to Engage/No Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Resolved, Awaiting Booking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Resolved, No Booking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Not Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Feedback to Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Call</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Reason_for_Disengagement__c</fullName>
        <label>Sub-Reason for Disengagement</label>
        <picklist>
            <controllingField>Reason_for_Disengagement__c</controllingField>
            <picklistValues>
                <fullName>Client Failed to recruit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client uses competitor media as cheaper option</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use competitor for easy to fill roles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only use TES for hard to fill roles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use free media first</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hire wire difficult to use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TES has no self service facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor offers longer advert life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prefer subscription or package model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TES has unclear pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor can post advert faster than TES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production errors</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject_of_Enquiry__c</fullName>
        <label>Subject of Enquiry</label>
        <picklist>
            <picklistValues>
                <fullName>Print Publication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specific Booking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Count__c</fullName>
        <label>Survey Count</label>
        <summaryForeignKey>Survey__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Survey_Site_Main_Link__c</fullName>
        <formula>IF(  NOT(ISBLANK(Check_In_Survey_Link__c)) , LEFT(Check_In_Survey_Link__c,FIND(&quot;?id=&quot;, Check_In_Survey_Link__c) -1) ,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Site Main Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Source__c</fullName>
        <label>Survey Source</label>
        <picklist>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Responsible__c</fullName>
        <label>Team(s) Responsible</label>
        <picklist>
            <picklistValues>
                <fullName>Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Success Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upsell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upsell Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upsell P&amp;O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TES Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TES Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Business Managers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leadership Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FE Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upsell Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Known</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Telephone_Number__c</fullName>
        <inlineHelpText>Enter the telephone number if the person is NOT an existing contact</inlineHelpText>
        <label>Telephone Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temporary_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Temporary Employee?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <picklist>
            <picklistValues>
                <fullName>Mr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Traffic_Light_Icon__c</fullName>
        <formula>IF(ISPICKVAL(Client_Mood__c, &quot;Red&quot;),IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;Red light&quot;),IF(ISPICKVAL(Client_Mood__c, &quot;Amber&quot;),IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;Amber light&quot;),IF(ISPICKVAL(Client_Mood__c, &quot;Green&quot;),IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;Green light&quot;),&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Traffic Light Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_CST_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if the trigger has updated the CST Owner when Stage becomes &quot;Check In&quot;</inlineHelpText>
        <label>Updated CST Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vacancy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vacancy</label>
        <referenceTo>Vacancy__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>eTeach_Additional_Info__c</fullName>
        <label>eTeach Additional Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>eTeach_Subscription_End_Date__c</fullName>
        <label>eTeach Subscription End Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllCases</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>Priority_Account_Name__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Vacancy__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>Status_Custom__c</columns>
        <columns>Check_In_Call_Date__c</columns>
        <columns>Customer_Care_Call_Date__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Customer_Success_Case_Surveys</value>
        </filters>
        <filters>
            <field>Ad_Start_Date_Time__c</field>
            <operation>greaterThan</operation>
            <value>12/12/2014 12:00 AM</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>greaterOrEqual</operation>
        </filters>
        <filters>
            <field>Vacancy__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>A: All Survey Cases</label>
        <sharedTo>
            <role>Customer_Success_Consultant</role>
            <role>Customer_Success_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Comments_Read</fullName>
        <columns>Priority_Account_Name__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Comments_Suggestions</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Read</value>
        </filters>
        <label>Comments - Read</label>
        <sharedTo>
            <role>Quality_Manager</role>
        </sharedTo>
    </listViews>
</CustomObject>